[package]
name = "sanki-sync"
version = "0.1.0"
edition = "2021"
authors = ["Szybet, https://github.com/Szybet"]
repository = "https://github.com/Szybet/sanki"

[dependencies]
axum = "0.6.18"
axum-extra = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
log = "0.4.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.14", features = ["json"]}
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
